garde_derive_tests/tests/compile-fail/unknown_rule.rs
#[derive(garde::Validate)]
struct Test<'a> {
    #[garde(unknown_rule)]
    field: &'a str,
}

fn main() {}
