garde_derive_tests/tests/compile-fail/unknown_rule.stderr
error: unrecognized validation rule
 --> tests/compile-fail/unknown_rule.rs:3:13
  |
3 |     #[garde(unknown_rule)]
  |             ^^^^^^^^^^^^
